First working version of JDDLoggerSQSHandler

--- a/conf/config-sample.yaml
+++ b/conf/config-sample.yaml
@@ -1,3 +1,8 @@
+sqslog:
+  queue: JDDLogQueue.fifo
+  aws_key_id: <your AWS SQS key id>
+  secret_key: <your AWS SQS secret key>
+  aws_region: us-xxxx-N
 job_queries:
 - job_name: Software Engineer
 - job_name: Backend Developer
