--- a/conf/config-sample.yaml
+++ b/conf/config-sample.yaml
@@ -3,6 +3,8 @@ sqslog:
   aws_key_id: <your AWS SQS key id>
   secret_key: <your AWS SQS secret key>
   aws_region: us-xxxx-N
+loglevel: DEBUG
+logfile: jdd-log.txt
 job_queries:
 - job_name: Software Engineer
 - job_name: Backend Developer
