--- a/conf/config-sample.yaml
+++ b/conf/config-sample.yaml
@@ -7,19 +7,41 @@ loglevel: DEBUG
 logfile: jdd-log.txt
 job_services:
 - name: The Muse
-  Authorization-Key: YourAPIKey
-  User-Agent: your@email.address
   class_name: MuseDataGrabber
+  User-Agent: your@email.address
   method: GET
-  params:
-    category:
-    - Software Engineer
-    - Data Science
-    - IT
-    level:
-    - Senior Level
-    - Mid Level
-    location: United States
   url: https://www.themuse.com/api/public/jobs
+  api_key: <get your key by registering your app in themuse.com>
+  category:
+  - Data Science
+  - IT
+  - Software Engineer
+  level:
+  - Mid Level
+  - Senior Level
+  location:
+  - Amsterdam, Netherlands
+  - Rotterdam, Netherlands
+  - The Hague, Netherlands
+  - Lisbon, Portugal
+  - Porto, Portugal
+  - London, United Kingdom
+  - Dublin, Ireland
+  - Rome, Italy
+  - Milan, Italy
+  - Barcelona, Spain
+  - Madrid, Spain
+  - Murcia, Spain
+  - Seville, Spain
+  - Valencia, Spain
+  - Paris, France
+  - Berkeley, CA
+  - Mountain View, CA
+  - Raleigh, NC
+  - Redmond, WA
+  - San Francisco, CA
+  - San Jose, CA
+  - Seattle, WA
+  - New York, NY
 mongodb:
   connection: mongodb+srv://<user>:<password>@cluster0.abcd.mongodb.net/<default_database>?retryWrites=true&w=majority
